--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -18383,20 +18383,38 @@ nav.pagination {
       min-width: 3rem; }
       nav.pagination .nav-links .page-numbers.current {
         pointer-events: none; }
-      nav.pagination .nav-links .page-numbers.prev:after, nav.pagination .nav-links .page-numbers.next:after {
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        display: inline-block;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: normal;
-        line-height: 1;
-        font-family: icomoon;
-        content: "";
+      nav.pagination .nav-links .page-numbers.prev, nav.pagination .nav-links .page-numbers.next {
+        overflow: hidden;
+        text-indent: -100000px;
         position: relative;
-        top: .08em; }
-      nav.pagination .nav-links .page-numbers.prev span, nav.pagination .nav-links .page-numbers.next span {
-        display: none; }
+        width: 3rem; }
+        nav.pagination .nav-links .page-numbers.prev:after, nav.pagination .nav-links .page-numbers.next:after {
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+          display: inline-block;
+          font-style: normal;
+          font-variant: normal;
+          font-weight: normal;
+          line-height: 1;
+          font-family: icomoon;
+          content: "";
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          text-indent: 0;
+          display: -webkit-box;
+          display: -ms-flexbox;
+          display: flex;
+          -webkit-box-pack: center;
+              -ms-flex-pack: center;
+                  justify-content: center;
+          -webkit-box-align: center;
+              -ms-flex-align: center;
+                  align-items: center; }
+        nav.pagination .nav-links .page-numbers.prev span, nav.pagination .nav-links .page-numbers.next span {
+          display: none; }
       nav.pagination .nav-links .page-numbers.prev:after {
         -webkit-transform: rotateY(180deg);
                 transform: rotateY(180deg); }
@@ -25978,6 +25996,10 @@ body.mobile-menu-active {
     .application-form_wrapper .gform_page_footer .gform_previous_button + button[type=submit] {
       width: calc(50% - .5rem);
       margin-left: .5rem; }
+
+#index-entries h1 {
+  text-align: center;
+  margin-bottom: 2rem; }
 
 #index-entries .entries-list article {
   padding: 3rem 0;
