--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_pagination.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_pagination.scss
@@ -24,10 +24,21 @@ nav.pagination {
 			}
 			&.prev,
 			&.next {
+				overflow: hidden;
+				text-indent: -100000px;
+				position: relative;
+				width: 3rem;
 				&:after {
 					@include icon(map-get($icomoon-icons, arrow-right), icomoon);
-					position: relative;
-					top: .08em;
+					position: absolute;
+					top: 0;
+					left: 0;
+					width: 100%;
+					height: 100%;
+					text-indent: 0;
+					display: flex;
+					justify-content: center;
+					align-items: center;
 				}
 				span {
 					display: none;
