--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -1962,6 +1962,25 @@
 			}
 		}
 	}
+	.team-group-title {
+		width: 100%;
+		padding: 0 .5rem 0rem;
+		text-transform: uppercase;
+		font-weight: 900;
+		font-family: $font-family-sans-serif;
+		@include media-breakpoint-up(md) {
+			padding: 2rem 1rem 0rem;
+			font-size: 2.75rem;
+			&:first-child {
+				padding-top: 1rem;
+			}
+		}
+		span {
+			display: inline-block;
+			padding-bottom: 0.5rem;
+			border-bottom: 6px solid $primary;
+		}
+	}
 	article.type-team_member {
 		width: 50%;
 		display: flex;
