--- a/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/editor-style.css
@@ -21543,6 +21543,23 @@ nav.pagination {
       .wp-block-crown-blocks-team-member-index .post-feed > .inner > .alert-wrapper {
         padding: 0 1rem 1rem; } }
 
+.wp-block-crown-blocks-team-member-index .team-group-title {
+  width: 100%;
+  padding: 0 .5rem 0rem;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-family: "proxima-nova", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
+  @media (min-width: 768px) {
+    .wp-block-crown-blocks-team-member-index .team-group-title {
+      padding: 2rem 1rem 0rem;
+      font-size: 2.75rem; }
+      .wp-block-crown-blocks-team-member-index .team-group-title:first-child {
+        padding-top: 1rem; } }
+  .wp-block-crown-blocks-team-member-index .team-group-title span {
+    display: inline-block;
+    padding-bottom: 0.5rem;
+    border-bottom: 6px solid #032040; }
+
 .wp-block-crown-blocks-team-member-index article.type-team_member {
   width: 50%;
   display: -webkit-box;
