--- a/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/components/_blocks.scss
@@ -3041,8 +3041,7 @@
 			}
 		}
 	}
-	article.type-resource,
-	article.type-resource_s {
+	article.type-resource {
 		width: 100%;
 		padding: 0 1rem 2rem;
 		@include media-breakpoint-up(md) {
